Spring-Project/gateway/envoy.yml
static_resources:
  listeners:
    - name: listener_gateway
      address:
        socket_address:
          address: 0.0.0.0
          port_value: 8100
      filter_chains:
        - filters:
            - name: envoy.filters.network.http_connection_manager
              typed_config:
                "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
                stat_prefix: ingress_http
                route_config:
                  name: local_route
                  virtual_hosts:
                    - name: local_service
                      domains: ["*"]
                      routes:
                        - match:
                            prefix: "/api/medium/demo/project"
                          route:
                            cluster: spring-project
                        - match:
                            prefix: "/api/medium/demo/admin"
                          route:
                            cluster: spring-admin
                        - match:
                            prefix: "/api/medium/demo/admin"
                          route:
                            cluster: spring-aggregation
                http_filters:
                  - name: envoy.filters.http.router
                    typed_config:
                      "@type": type.googleapis.com/envoy.extensions.filters.http.router.v3.Router

  clusters:
    - name: spring-project
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: spring-project
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: spring-project
                      port_value: 8101

    - name: spring-admin
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: spring-admin
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: spring-admin
                      port_value: 8102

    - name: spring-aggregation
      connect_timeout: 0.25s
      type: STRICT_DNS
      lb_policy: ROUND_ROBIN
      load_assignment:
        cluster_name: spring-aggregation
        endpoints:
          - lb_endpoints:
              - endpoint:
                  address:
                    socket_address:
                      address: spring-aggregation
                      port_value: 8103
